--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CMPM 120 Final</title>
+    <title>CMPM 120 Final Project</title>
+    <script src="phaser.js"></script>
+    <script src="test.js"></script>
+    <script src="dialogue.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
-    <a href="prototypes_2/index.html">testing</a>
+    
 </body>
 </html>
